--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -4070,6 +4070,52 @@ A l'indicatif présent:</p>
     <p>2. Lorsque l'infinitif est déjà terminé par un <em>ⲧ</em>, on n'ajoute pas toujours un autre <em>ⲧ</em>, mais il est toujours permis de l'ajouter.</p>
     <p class="footnote">1. Br. 215.</p>
     <p class="footnote">2. Ps. 26. 19.</p>
+    <p><em>ϭⲓⲧ</em><sup class="footnote">1</sup> et <em>ϭⲓⲧⲧ</em><sup class="footnote">2</sup> de <em>ϭⲓ ϭⲓⲧ⸗</em> «prendre»;</p>
+    <p><em>ϩⲓⲧ</em><sup class="footnote">3</sup> et <em>ϩⲓⲧⲧ</em><sup class="footnote">4</sup> de <em>ϩⲓⲟⲩⲓ ϩⲓⲧ⸗</em> «jeter».</p>
+    <p>Mais on trouve toujours <em>ⲕⲟⲧⲧ</em>, <em>ⲥⲟⲧⲧ</em>, <em>ϥⲓⲧⲧ</em>.</p>
+    <p>3. Les verbes terminés par <em>ⲃ</em> <em>ⲙ</em> <em>ⲛ</em> précédés d'une consonne prennent la voyelle auxiliaire <em>ⲉ</em> avant l'adjonction des suffixes, excepté à la 2 f. sg. et à la 2 et 5 pl.</p>
+    <p>De <em>ⲛⲟϩⲉⲙ ⲛⲁϩⲙ⸗</em> «délivrer », on a:</p>
+    <table>
+      <tr>
+        <th>Sing.</th><th></th><th>Pl.</th><th></th>
+      </tr>
+      <tr>
+        <td>1.</td><td><em>ⲛⲁϩⲙⲉⲧ</em></td><td>1.</td><td><em>ⲛⲁϩⲙⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>2 m.</td><td><em>ⲛⲁϩⲙⲉⲕ</em></td><td>2.</td><td><em>ⲛⲁϩⲉⲙ-ⲑⲏⲛⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲛⲁϩⲙⲓ</em></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>3 m.</td><td><em>ⲛⲁϩⲙⲉϥ</em></td><td>3.</td><td><em>ⲛⲁϩⲙⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲛⲁϩⲙⲉⲥ</em></td><td></td><td></td>
+      </tr>
+    </table>
+    <p>II. La 2 sg. f. ne prend rien après les voyelles <em>ⲟ</em> <em>ⲱ</em>; elle prend <em>ⲓ</em> après une consonne.</p>
+    <p>1. Les verbes en <em>ⲁ⸗</em> <em>ⲓ⸗</em> ajoutent <em>ⲓ</em> à la 1 sg., ce qui donne <em>ϯ</em>:</p>
+    <p><em>ⲭⲁ⸗ ⲭⲁϯ</em>,</p>
+    <p><em>ⲁⲓ⸗ ⲁⲓϯ</em>,</p>
+    <p><em>ⲧⲏⲓ⸗ ⲧⲏⲓϯ</em>.</p>
+    <p>2. Après une consonne on trouve aussi <em>ϯ</em> au lieu de <em>ⲓ</em>:</p>
+    <p><em>ⲙⲟⲣϯ</em> et <em>ⲙⲟⲣⲓ</em><sup class="footnote">5</sup> de <em>ⲙⲟⲩⲣ ⲙⲟⲣ⸗</em> «lier»;</p>
+    <p><em>ϫⲟⲣϯ</em><sup class="footnote">6</sup> de <em>ϫⲱⲣ ϫⲟⲣ⸗</em> «dissiper»;</p>
+    <p><em>ⲟⲩⲟⲙϯ</em><sup class="footnote">7</sup> de <em>ⲟⲩⲱⲙ ⲟⲩⲟⲙ⸗</em> «manger»;</p>
+    <p><em>ⲫⲁⲥϯ</em><sup class="footnote">8</sup> de <em>ⲫⲓⲥⲓ ⲫⲁⲥ⸗</em> «faire cuire»;</p>
+    <p><em>ⲥⲟⲧϯ</em><sup class="footnote">9</sup> de <em>ⲥⲱϯ ⲥⲟⲧ⸗</em> «sauver».</p>
+    <p>III. La 1 pl. prend <em>ⲛ</em> après une voyelle; après une consonne on emploie plus généralement <em>ⲧⲉⲛ</em>, mais souvent aussi <em>ⲉⲛ</em>. Quelquefois le même verbe a les deux formes:</p>
+    <p class="footnote">1. Lam. 3, 2.</p>
+    <p class="footnote">2. Ez. 3, 14.</p>
+    <p class="footnote">3. Lam. 3, 44.</p>
+    <p class="footnote">4. Ez. 2, 1.</p>
+    <p class="footnote">5. Is. 3, 24.</p>
+    <p class="footnote">6. Mich. 6, 14.</p>
+    <p class="footnote">7. Nah. 3, 15.</p>
+    <p class="footnote">8. Is. 1, 25.</p>
+    <p class="footnote">9. Mich. 4, 10.</p>
   </div>
 </div>
 	</body>
