--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -4116,6 +4116,62 @@ A l'indicatif présent:</p>
     <p class="footnote">7. Nah. 3, 15.</p>
     <p class="footnote">8. Is. 1, 25.</p>
     <p class="footnote">9. Mich. 4, 10.</p>
+    <p><em>ⲥⲟⲧⲡⲉⲛ</em><sup class="footnote">1</sup> de <em>ⲥⲱⲧⲡ</em> «choisir»;</p>
+    <p><em>ⲟⲡⲧⲉⲛ</em> de <em>ⲱⲡ</em> «compter»;</p>
+    <p><em>ⲟⲗⲧⲉⲛ</em> et <em>ⲟⲗⲉⲛ</em><sup class="footnote">2</sup> de <em>ⲱⲗⲓ</em> «enlever»;</p>
+    <p><em>ⲗⲟϫⲧⲉⲛ</em> et <em>ⲗⲟϫⲉⲛ</em><sup class="footnote">3</sup> de <em>ⲗⲱϫⲓ</em> «cesser».</p>
+    <p>Les verbes terminés par <em>ⲧ</em> prennent <em>ⲧⲉⲛ</em>:</p>
+    <p><em>ϩⲓⲧ-ⲧⲉⲛ</em>, <em>ⲥⲟⲧ-ⲧⲉⲛ</em>, <em>ⲕⲟⲧ-ⲧⲉⲛ</em>, <em>ϣⲁⲧ-ⲧⲉⲛ</em>, <em>ⲙⲉⲛⲣⲓⲧ-ⲧⲉⲛ</em>.</p>
+    <p>On trouve une fois <em>ϩⲓⲧⲉⲛ</em><sup class="footnote">4</sup>.</p>
+    <p>Les verbes terminés par <em>ⲓ⸗</em> qui prennent <em>ⲧ</em> à la 1 sg. le gardent à la 1 pl.: <em>ⲁⲓⲧⲉⲛ</em>.</p>
+    <p>IV. La 2 pl. peut <i>toujours</i> se former en ajoutant <em>ⲑⲏⲛⲟⲩ</em> à l'infinitif construit.</p>
+    <p>Cette formation est de règle pour les verbes terminés par une consonne, et cela afin de distinguer la 1 pl. de la 2 pl.; elle semble libre pour les autres verbes:</p>
+    <p><em>ⲕⲉⲧ-ⲑⲏⲛⲟⲩ</em> «convertissez-vous»;</p>
+    <p><em>ⲁϥⲧⲁⲙⲱⲧⲉⲛ</em> «il vous a informés».</p>
+    <p>V. La 3 pl. est toujours en <em>ⲟⲩ</em>. Après <em>ⲁ</em>, <em>ⲟⲩ</em> se contracte en <em>ⲩ</em>: <em>ⲭⲁ⸗ ⲭⲁⲩ</em>, <em>ⲓⲁ⸗ ⲓⲁⲩ</em>.</p>
+    <p>On intercale parfois un <em>ⲧ</em> euphonique entre le radical et <em>ⲟⲩ</em>: <em>ϫⲟⲧⲟⲩ</em> de <em>ϫⲱ ϫⲟ⸗</em> «dire».</p>
+    <p>Les verbes terminés par <em>ⲓ⸗</em> qui prennent <em>ⲧ</em> à la 1 sg. le gardent devant <em>ⲟⲩ</em>:</p>
+    <p><em>ⲁⲓⲧⲟⲩ</em>, <em>ⲙⲏⲓⲧⲟⲩ</em>, <em>ⲧⲏⲓⲧⲟⲩ</em>.</p>
+    <p><i>Remarques.</i> Aux deux dernières personnes du pluriel, <em>ⲟ</em> se change en <em>ⲱ</em> devant <em>ⲧⲉⲛ</em> et <em>ⲟⲩ</em>.</p>
+    <p class="footnote">1. Eph. 1, 4.</p>
+    <p class="footnote">2. Is. 64, 6.</p>
+    <p class="footnote">3. Jer. 7, 10.</p>
+    <p class="footnote">4. Mt. 8, 31.</p>
+    <p><i>4. Verbes employés dans le sens réfléchi.</i></p>
+    <p>Plusieurs verbes coptes se conjuguent avec deux pronoms de la même personne, dont l'un est sujet et l'autre régime, absolument comme en français «se lever, se reposer» etc.: <em>ⲁϥ-ⲧⲱⲛ-ϥ</em> «il se leva».</p>
+    <p>Le second pronom peut être régime direct ou indirect, selon que le verbe est transitif ou intransitif.</p>
+    <p>a. Verbes transitifs.</p>
+    <p>Tous les verbes transitifs pourraient être employés dans le sens réfléchi comme en français «s'aimer, se louer». Mais en copte ce sens est attaché à l'infinitif lui-même sans le secours d'un second pronom (192).</p>
+    <p>Il n'y a qu'un certain nombre de verbes qui admettent comme régime direct un pronom de la même personne. Les plus employés sont: <em>ⲧⲱⲛ⸗</em> «se lever» qui devient <em>ⲧⲱⲟⲩⲛ⸗</em> à la 3 pl: <em>ⲁⲩ-ⲧⲱⲟⲩⲛ-ⲟⲩ</em> «ils se levèrent».</p>
+    <p><em>ⲕⲟⲧ⸗</em> «s'en retourner, revenir»,</p>
+    <p><em>ⲗⲟϫ⸗</em> «se relever, guérir»,</p>
+    <p><em>ⲟⲩⲁϩ⸗ ⲉ</em> «(s'ajouter à) suivre»,</p>
+    <p><em>ⲟⲩⲁϩⲙ⸗</em> «se remettre à»,</p>
+    <p><em>ⲟⲩⲟⲛϩ⸗</em> «se montrer, apparaître»,</p>
+    <p><em>ⲣⲟⲑⲃ⸗</em> «se mettre à table»,</p>
+    <p><em>ⲥⲁϩⲱ⸗</em> «s'éloigner»,</p>
+    <p><em>ⲧⲁⲗⲟ⸗</em> «monter»,</p>
+    <p><em>ⲧⲁⲥⲑⲟ⸗</em> «revenir»,</p>
+    <p><em>ⲧⲉⲛⲑⲱⲛ⸗</em> «ressembler à»,</p>
+    <p><em>ⲧⲟⲙ⸗</em> «s'attacher à»,</p>
+    <p><em>ϥⲟϫ⸗</em> «s'élancer»,</p>
+    <p><em>ϩⲉⲛ⸗</em> «se mouvoir»,</p>
+    <p><em>ϫⲉⲙ⸗</em> «se trouver».</p>
+    <p>Ajoutez deux verbes composés: <em>ⲟⲩⲁϩ-ⲧⲟⲧ⸗</em> «se remettre à», <em>ⲭⲁ-ⲧⲟⲧ⸗</em> «se décourager».</p>
+    <p>Les verbes <em>ⲙ̀ⲧⲟⲛ</em> <i>qual.</i> <em>ⲙⲟⲧⲉⲛ</em> «se reposer», <em>ⲓⲏⲥ</em> «se hâter», <em>ⲭⲱⲗⲉⲙ</em> «se hâter», <em>ⲟⲩⲛⲟϥ</em> «se réjouir», exigent <em>ⲙ̀ⲙⲟ⸗</em>: <em>ⲁϥⲙ̀ⲧⲟⲛ ⲙ̀ⲙⲟϥ</em> «il se reposa»; <em>ⲓⲏⲥ ⲙ̀ⲙⲟⲕ</em> «hâte-toi»; <em>ⲁϥⲭⲱⲗⲉⲙ ⲙ̀ⲙⲟϥ</em> «il se hâta»; <em>ⲙⲁⲣⲉⲛⲟⲩⲛⲟϥ ⲙ̀ⲙⲟⲛ</em> «réjouissons-nous».</p>
+    <p>b. Verbes intransitifs.</p>
+    <p>Les quelques verbes qui, avec une préposition, ont un sens réfléchi sont:</p>
+    <p><em>ϣⲉ ⲛ⸗</em> «s'en aller»: <em>ⲁϥϣⲉ ⲛⲁϥ</em> «il s'en alla», <em>ⲁⲩϣⲉ ⲛⲱⲩ</em> «ils s'en allèrent».</p>
+    <p>La même construction peut avoir lieu avec les verbes grecs qui signifient «partir»: <em>ⲁϥⲟⲩⲱϣ ⲉ ⲉⲣⲁⲛⲁⲭⲱⲣⲓⲛ ⲛⲁϥ</em> «il voulut s'en aller»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲛⲁⲩ ⲉⲣⲟ⸗</em> «sembler»: <em>ⲁⲓⲛⲁⲩ ⲉⲣⲟⲓ</em> «il me sembla»<sup class="footnote">2</sup>.</p>
+    <p><em>ϥⲁⲓ ⲉⲣⲟ⸗</em> «se contenir»: <em>ⲙ̀ⲡⲉϥϣϥⲁⲓ ⲉⲣⲟϥ</em> «il ne put se contenir»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲟϩⲓ ⲉⲣⲁⲧ⸗</em> «se tenir debout»: <em>ⲁⲥⲟϩⲓ ⲉⲣⲁⲧⲥ</em> «elle s'est tenue debout».</p>
+    <p><i>5. Remarques sur quelques verbes.</i></p>
+    <p><em>ⲣⲁⲛⲉ- ⲣⲁⲛ⸗</em> «plaire à».</p>
+    <p>Ce verbe, composé de <em>ⲉⲣ-</em> et de la même racine que <em>ⲁⲛⲁⲓ</em> «être bon», n'a pas de forme absolue; il est toujours suivi d'un régime, nom ou pronom suffixe:</p>
+    <p class="footnote">1. Kef. 352.</p>
+    <p class="footnote">2. MS. 419.</p>
+    <p class="footnote">3. D. 545.</p>
   </div>
 </div>
 	</body>
