--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -4172,6 +4172,60 @@ A l'indicatif présent:</p>
     <p class="footnote">1. Kef. 352.</p>
     <p class="footnote">2. MS. 419.</p>
     <p class="footnote">3. D. 545.</p>
+    <p><em>ⲁ ⲡⲓⲥⲁϫⲓ ⲣⲁⲛⲉ-ⲫⲁⲣⲁⲱ</em> «le discours plut à Pharaon»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲁⲥⲣⲁⲛⲏⲓ</em> «il m'a plu»<sup class="footnote">2</sup>.</p>
+    <p>Lorsque le régime est un nom, on emploie généralement la forme avec suffixe et on fait suivre le nom au moyen de <em>ⲛ̀</em> (<em>ⲙ̀</em>):</p>
+    <p><em>ⲁⲩⲣⲁⲛⲁϥ ⲙ̀ⲡϭⲟⲓⲥ</em> «ils ont plu au Seigneur»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲕⲏⲛ</em>, <em>ⲟⲩⲱ</em> «cesser de».</p>
+    <p>Ces deux verbes présentent deux sens:</p>
+    <p>1. «Cesser de», avec un verbe au 3<sup>e</sup> présent:</p>
+    <p><em>ⲁϥⲕⲏⲛ ⲉϥⲥⲁϫⲓ</em><sup class="footnote">4</sup>, <em>ⲁϥⲟⲩⲱ ⲉϥⲥⲁϫⲓ</em><sup class="footnote">5</sup> «il cessa de parler».</p>
+    <p><em>ⲁⲥⲧⲥⲟϥ ϣⲁⲧⲉϥⲟⲩⲱ ⲉϥⲥⲱ</em> «elle lui versa jusqu'à ce qu'il eût cessé de boire»<sup class="footnote">6</sup>.</p>
+    <p>Le verbe <em>ⲗⲱϫⲓ ⲗⲟϫ⸗</em> s'emploie aussi dans ce sens:</p>
+    <p><em>ⲁⲩⲗⲟϫⲟⲩ ⲉⲩⲕⲱⲧ</em> «ils cessèrent de construire»<sup class="footnote">7</sup>.</p>
+    <p>Une construction semblable du verbe composé <em>ϫⲉⲕ-ⲧⲟⲧ⸗ ⲉⲃⲟⲗ</em> signifie «achever de»: <em>ⲁϥϫⲉⲕⲧⲟⲧϥ ⲉⲃⲟⲗ ⲉϥⲥϧⲁⲓ</em> «il acheva d'écrire»<sup class="footnote">8</sup>.</p>
+    <p>2. «Déjà» au parfait, avec un verbe au même temps, au 3<sup>e</sup> présent ou à l'infinitif avec <em>ⲉ</em>:</p>
+    <p><em>ⲁⲥⲟⲩⲱ ⲁⲥⲓ̀</em> «elle est déjà venue»<sup class="footnote">9</sup>.</p>
+    <p><em>ⲁⲩⲕⲏⲛ ⲉⲩϭⲓ ⲙ̀ⲡⲟⲩⲃⲉⲭⲉ</em> «ils ont déjà reçu leur récompense»<sup class="footnote">10</sup>.</p>
+    <p><em>ⲁ ⲡⲁⲓⲱⲧ ⲕⲏⲛ ⲉ ⲥϧⲁⲓ ⲙ̀ⲡⲉⲕⲣⲁⲛ</em> «mon père a déjà écrit ton nom»<sup class="footnote">11</sup>.</p>
+    <p><em>ⲁⲩⲟⲩⲱ ⲉⲩϯϩⲁⲡ ⲉⲣⲟϥ</em> «il est déjà jugé»<sup class="footnote">12</sup>.</p>
+    <p class="footnote">1. Gen. 41, 37.</p>
+    <p class="footnote">2. Luc 1, 3.</p>
+    <p class="footnote">3. Th. 142.</p>
+    <p class="footnote">4. Ex. 31, 18.</p>
+    <p class="footnote">5. Gen. 18, 33.</p>
+    <p class="footnote">6. Fen. 24, 18.</p>
+    <p class="footnote">7. Gen. 11, 8.</p>
+    <p class="footnote">8. Deut. 31, 24.</p>
+    <p class="footnote">9. Mc. 14, 41.</p>
+    <p class="footnote">10. Mt. 6, 2.</p>
+    <p class="footnote">11. AM. 2, 8.</p>
+    <p class="footnote">12. Jean 3, 18.</p>
+    <p><em>ⲟⲩⲁϩⲧⲟⲧ⸗</em>, <em>ⲟⲩⲁϩⲙ⸗</em> «se remettre à».</p>
+    <p><em>ⲟⲩⲁϩⲧⲟⲧ⸗</em> peut être suivi du 1<sup>er</sup> parfait lorsqu'il est lui-même à ce temps; partout ailleurs il est accompagné de l'infinitif avec <em>ⲉ</em>. Il peut se traduire par «de nouveau, encore, en outre»:</p>
+    <p><em>ⲁⲥⲟⲩⲁϩⲧⲟⲧⲥ ⲁⲥⲙⲓⲥⲓ</em> <em>عادت وولدت</em> «elle enfanta de nouveau»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲛ̀ⲛⲟⲩⲟⲩⲁϩⲧⲟⲧⲟⲩ ⲉ ⲓⲣⲓ ⲕⲁⲧⲁ ⲡⲁⲓϩⲱⲃ</em> «ils n'agiront plus de cette manière»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲟⲩⲁϩⲙ⸗</em> est suivi du 3<sup>e</sup> présent et signifie «faire de nouveau»:</p>
+    <p><em>ⲁϥⲟⲩⲁϩⲙⲉϥ ⲉϥϫⲟⲥ</em> «il dit de nouveau».</p>
+    <p>Chapitre XII.</p>
+    <p>Ancienne Conjugaison.</p>
+    <p>Dans l'ancienne langue égyptienne les temps simples se formaient, comme le prétérit arabe (<em>الماضي</em>), en plaçant le sujet, nom ou pronom, après la racine verbale. Ce mode de conjugaison a persisté en copte dans les verbes suivants:</p>
+    <p class="footnote">1. Gen. 4, 2.</p>
+    <p class="footnote">2. Deut. 13, 11.</p>
+    <p>I. Quatre verbes adjectifs.</p>
+    <p><em>ⲛⲁⲁ</em> «être grand»,</p>
+    <p><em>ⲛⲁⲛⲉ</em> «être bon»,</p>
+    <p><em>ⲛⲁϣⲉ</em> «être nombreux»,</p>
+    <p><em>ⲛⲉⲥⲉ</em> «être beau».</p>
+    <p>II. Deux verbes personnels.</p>
+    <p><em>ⲡⲉϫⲉ</em> «dire»,</p>
+    <p><em>ⲉϩⲛⲉ</em> «vouloir».</p>
+    <p>III. Quatre verbes impersonnels.</p>
+    <p><em>ⲟⲩⲟⲛ</em> «être»,</p>
+    <p><em>ⲙ̀ⲙⲟⲛ</em> «n'être pas»,</p>
+    <p><em>ⲟⲩⲉⲧ</em> «être différent»,</p>
+    <p><em>ⲥϣⲉ</em> «il faut».</p>
+    
   </div>
 </div>
 	</body>
