--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -4605,6 +4605,18 @@ A l'indicatif présent:</p>
     <p>Prépositions.</p>
     <p>Les prépositions sont <i>simples</i> (<em>ⲉ</em>) ou <i>composées</i> (<em>ⲉ-ϫⲉⲛ</em>). Elles s'emploient avec les noms et avec les pronoms affixes. Dans le premier cas elles sont à l'état construit et l'accent est sur leur régime; dans le second cas elles portent elles-mêmes l'accent tonique.</p>
     <p>1. Prépositions simples.</p>
+    <p><em>ⲁⲧϭⲛⲉ- ⲁⲧϭⲛⲟⲩ⸗</em> «sans»,</p>
+    <p><em>ⲉ- ⲉⲣⲟ⸗</em> «vers <em>الى</em>»,</p>
+    <p><em>ⲛ̀- ⲛ⸗</em> «à <em>لِ</em>»,</p>
+    <p><em>ⲛⲉⲙ- ⲛⲉⲙ⸗</em> «avec»,</p>
+    <p><em>ⲟⲩⲃⲉ- ⲟⲩⲃⲏ⸗</em> «contre»,</p>
+    <p><em>ⲟⲩⲧⲉ- ⲟⲩⲧⲱ⸗</em> «entre»,</p>
+    <p><em>ⲥⲁ-</em> «dans»,</p>
+    <p><em>ϣⲁ- ϣⲁⲣⲟ⸗</em> «jusqu'à»,</p>
+    <p><em>ϧⲁ- ϧⲁⲣⲟ⸗</em> «sous»,</p>
+    <p><em>ϧⲉⲛ- ⲛ̀ϧⲏⲧ⸗</em> «en»,</p>
+    <p><em>ϩⲁ- ϩⲁⲣⲟ⸗</em> «vers»,</p>
+    <p><em>ϩⲓ- ϩⲓⲱⲧ⸗</em> «sur».</p>
   </div>
 </div>
 	</body>
