--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 	<head>
+		<title>Grammaire copte</title>
 		<link rel="stylesheet" href="./styles/styles.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
@@ -2667,13 +2669,13 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
         <td></td><td>absolu</td><td>construit</td><td>pronominal</td><td></td><td></td>
       </tr>
       <tr>
-        <td><i>Règle:</td><td><em>ⲱ</em></td><td><em>ⲉ</em></td><td><em>ⲟ</em></td><td><em>ⲏ</em></td><td></td>
+        <td><i>Règle:</i></td><td><em>ⲱ</em></td><td><em>ⲉ</em></td><td><em>ⲟ</em></td><td><em>ⲏ</em></td><td></td>
       </tr>
       <tr>
-        <td><i></td><td><em>ⲃⲱⲗ</em></td><td><em>ⲃⲉⲗ-</em></td><td><em>ⲃⲟⲗ⸗</em></td><td><em>ⲃⲏⲗ</em></td><td>délier,</td>
+        <td></td><td><em>ⲃⲱⲗ</em></td><td><em>ⲃⲉⲗ-</em></td><td><em>ⲃⲟⲗ⸗</em></td><td><em>ⲃⲏⲗ</em></td><td>délier,</td>
       </tr>
       <tr>
-        <td><i></td><td><em>ⲱⲡ</em></td><td><em>ⲉⲡ-</em></td><td><em>ⲟⲡ⸗</em></td><td><em>ⲏⲡ</em></td><td>compter.</td>
+        <td></td><td><em>ⲱⲡ</em></td><td><em>ⲉⲡ-</em></td><td><em>ⲟⲡ⸗</em></td><td><em>ⲏⲡ</em></td><td>compter.</td>
       </tr>
     </table>
     <p>De même les verbes qui commencent par <em>ⲙ</em> <em>ⲛ</em> et ont <em>ⲟⲩ</em> à la place de <em>ⲱ</em> pour voyelle formative à l'infinitif absolu (29):</p>
@@ -4617,6 +4619,7 @@ A l'indicatif présent:</p>
     <p><em>ϧⲉⲛ- ⲛ̀ϧⲏⲧ⸗</em> «en»,</p>
     <p><em>ϩⲁ- ϩⲁⲣⲟ⸗</em> «vers»,</p>
     <p><em>ϩⲓ- ϩⲓⲱⲧ⸗</em> «sur».</p>
+    
   </div>
 </div>
 	</body>
