--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11117,7 +11117,57 @@
 		<p>
 			<em>ϩⲓ- ϩⲓⲱⲧ⸗</em> «sur».
 		</p>
+    <p><em>ⲁⲧϭⲛⲉ-</em> «sans».</p>
+    <p><em>ⲁⲧϭⲛⲉ- ⲁⲧϭⲛⲟⲩ⸗</em> ou bien <em>ⲁϭⲛⲉ- ⲁϭⲛⲟⲩ⸗</em> (Ṣ. <em>ⲁϫⲛ̄- ⲁϫⲛ̄ⲧ⸗</em>).</p>
+    <p>Avec les suffixes:</p>
+    <table>
+      <tr>
+        <th>Sing.</th><th></th><th>Pl.</th><th></th>
+      </tr>
+      <tr>
+        <td>1.</td><td><em>ⲁⲧϭⲛⲟⲩⲓ</em></td><td>1.</td><td><em>ⲁⲧϭⲛⲟⲩⲛ</em></td>
+      </tr>
+      <tr>
+        <td>2 m.</td><td><em>ⲁⲧϭⲛⲟⲩⲕ</em></td><td>2.</td><td><em>ⲁⲧϭⲛⲉ-ⲑⲏⲛⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>3 m.</td><td><em>ⲁⲧϭⲛⲟⲩϥ</em></td><td>3.</td><td><em>ⲁⲧϭⲛⲟⲩⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲁⲧϭⲛⲟⲩⲥ</em></td><td></td><td></td>
+      </tr>
+    </table>
+    <p>Devant un nom: <em>ⲁⲧϭⲛⲉ-</em> ou <em>ⲁϭⲛⲉ-</em>.</p>
+    <p>Le régime de cette préposition ne prend généralement pas l'article; il peut être un substantif ou un verbe à l'infinitif:</p>
+    <p><em>ⲁϭⲛⲉ ⲛⲟⲃⲓ</em> «sans péché»<sup class="footnote">1</sup>;</p>
+    <p><em>ⲁϭⲛⲉ ⲉⲣϩⲏⲧⲥⲛⲁⲩ</em> «sans hésiter»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲉ- ⲉⲣⲟ⸗</em> «vers, à».</p>
+    <p>Cette préposition (61) signifie:</p>
+    <p>1. «à, vers, <em>الى</em>» avec mouvement physique ou moral: <em>ⲉ ⲡϣⲁϥⲉ</em> «vers le désert»<sup class="footnote">3</sup>, <em>ⲉⲣⲟϥ</em> «à lui».</p>
+    <p>2. «à, <em>لِ</em>» avec le sens du datif: <em>ϩⲟⲛϩⲉⲛ ⲉ</em> «commander à», <em>ⲟⲩⲱⲛϩ ⲉ</em> «montrer à».</p>
+    <p>3. «de, hors de, <em>من</em>»: <em>ⲛⲟϩⲉⲙ ⲉ ⲧⲥⲏϥⲓ</em> «échapper au glaive»<sup class="footnote">4</sup>.</p>
+    <p>4. «sur, <em>على</em>»:</p>
+    <p><em>ⲟⲩⲟⲛ ⲟⲩⲭⲣⲉⲟⲥ ⲉⲣⲟⲓ</em> «j'ai une dette»<sup class="footnote">5</sup>.</p>
+    <p><em>ⲛ̀ⲑⲟϥ ⲉϥⲉⲉⲣϭⲟⲓⲥ ⲉⲣⲟ</em> «lui-même sera ton maître»<sup class="footnote">6</sup>.</p>
+    <p><em>ⲧⲁⲗⲟ⸗ ⲉ</em> «monter sur».</p>
+    <p>5. Elle sert à former le comparatif (171).</p>
+    <p>Il est un certain nombre de verbes actifs en français qui sont neutres en copte et gouvernent leur complément avec <em>ⲉ- ⲉⲣⲟ⸗</em>.</p>
+    <p>Tels sont:</p>
+    <p>1. Les verbes qui expriment une opération des sens ou de l'esprit:</p>
+    <p><em>ⲛⲁⲩ</em> «voir», <em>ϫⲟⲩϣⲧ</em> «regarder», <em>ⲥⲟⲙⲥ</em> «considérer»;</p>
+    <p><em>ⲥⲱⲧⲉⲙ</em> «entendre», <em>ϭⲓⲥⲙⲏ</em> «écouter»;</p>
+    <p><em>ϣⲱⲗⲉⲙ</em> «odorer»;</p>
+    <p><em>ϫⲟⲙϫⲉⲙ</em> «tâter», <em>ϭⲟϩ</em> «toucher»;</p>
+    <p><em>ⲉⲙⲓ</em> «savoir», <em>ⲕⲁϯ</em> «comprendre», <em>ⲙⲉⲩⲓ</em> «penser», <em>ⲛⲁϩϯ</em> «croire», <em>ⲉⲣϩⲉⲗⲡⲓⲥ</em> «espérer».</p>
+    <p>2. Les verbes qui expriment la parole: <em>ⲙⲟⲩϯ</em> «appeler», <em>ⲥⲙⲟⲩ</em> «bénir», <em>ϩⲱⲥ</em> «louer», <em>ϯϩⲟ</em> «prier», <em>ⲥⲁϩⲟⲩⲓ</em> «maudire», <em>ϩⲱⲟⲩϣ</em> «blâmer», <em>ϫⲱⲛⲧ</em> «se fâcher contre».</p>
+    <p class="footnote">1. Jean 8, 7.</p>
+    <p class="footnote">2. C. 95, 46.</p>
+    <p class="footnote">3. Mt. 4, 1.</p>
+    <p class="footnote">4. Ez. 6, 8.</p>
+    <p class="footnote">5. Z. 42.</p>
+    <p class="footnote">6. Gen. 3, 16.</p>
 	</div>
 </div>
+
 	</body>
 </html>
