--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11166,8 +11166,80 @@
     <p class="footnote">4. Ez. 6, 8.</p>
     <p class="footnote">5. Z. 42.</p>
     <p class="footnote">6. Gen. 3, 16.</p>
+	<p>3. Plusieurs verbes qui expriment le mouvement: <em>ⲕⲓⲙ</em> «mouvoir», <em>ϩⲓⲟⲩⲓ</em> «jeter», <em>ϣⲁⲣⲓ</em> «frapper», <em>ⲕⲱϯ</em>, <em>ⲧⲁⲕⲧⲟ</em> «entourer», <em>ⲁⲣⲉϩ</em>, <em>ⲣⲱⲓⲥ</em> «garder».</p>
+	<p><em>ⲛ̀-</em> (<em>ⲙ̀-</em> 28) <em>ⲛ⸗</em> (de l'ég. <i>n</i>).</p>
+	<p>C'est la préposition du datif (61):</p>
+	<p><em>ⲡⲉϫⲁϥ ⲙ̀ⲫⲓⲗⲓⲡⲡⲟⲥ</em> «il dit à Philippe»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲡⲉϫⲱⲟⲩ ⲛⲁϥ</em> «ils lui dirent».</p>
+	<p><em>ⲟⲩⲟⲓ ⲙ̀ⲡⲓⲕⲟⲥⲙⲟⲥ</em> «malheur au monde»<sup class="footnote">2</sup>.</p>
+	<p>Le verbe <em>ϯ</em> et ses composés gouvernent le datif avec <em>ⲛ̀</em>.</p>
+	<p><em>ⲛ̀-</em> (<em>ⲙ̀-</em>) <em>ⲙ̀ⲙⲟ⸗</em> (de l'ég. <i>m</i>).<sup class="footnote">3</sup> «dans».</p>
+	<p>Cette préposition (65) signifie:</p>
+	<p>1. «dans, pendant» pour le lieu et le temps:</p>
+	<p><em>ⲙ̀ⲡⲁⲓⲉⲟⲟⲩ</em> «en ce jour», <em>ⲙ̀ⲡⲁⲓⲙⲁ</em> «en ce lieu».</p>
+	<p><em>ⲁϥⲟϩⲓ ⲙ̀ⲙⲁⲩ ⲛ̀ⲉϩⲟⲟⲩ ⲥⲛⲁⲩ</em> «il passa là deux jours»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲁϥⲱⲛϧ ⲛ̀ϫⲉ ⲥⲏⲑ ⲛ̀ⲱ̅ⲉ̅ ⲛ̀ⲣⲟⲙⲡⲓ</em> «Seth vécut 805 ans»<sup class="footnote">5</sup>.</p>
+	<p>2. «de, hors de, <em>من</em>». Dans ce sens elle est généralement précédée de <em>ⲉⲃⲟⲗ</em>, <em>ⲥⲁⲃⲟⲗ</em>: <em>ⲙ̀ⲡⲉⲣⲟⲩⲉⲓ ⲥⲁⲃⲟⲗ ⲙ̀ⲙⲟⲓ</em> «ne t'éloigne pas de moi»<sup class="footnote">6</sup>.</p>
+	<p>3. «par, par le moyen de», pour l'instrument et le serment:</p>
+	<p><em>ⲛ̀ⲧⲥⲏϥⲓ</em> «par l'épée»;</p>
+	<p><em>ⲁϥⲱⲣⲕ ⲙ̀ⲫⲏ ⲉⲧϭⲟⲥⲓ</em> «il a juré par le Très-Haut»<sup class="footnote">7</sup>.</p>
+	<p>4. Elle sert de lien entre les verbes «être, devenir, faire, paraître» et leur attribut:</p>
+	<p><em>ⲟⲓ ⲛ̀ⲟⲩⲣⲟ</em> «être roi».</p>
+	<p><em>ⲁϥϣⲱⲡⲓ ⲛ̀ⲟⲩⲙⲁⲛⲉⲥⲱⲟⲩ</em> «il devint berger»<sup class="footnote">8</sup>.</p>
+	<p class="footnote">1. Jean 6, 5.</p>
+	<p class="footnote">2. Mt. 18, 7.</p>
+	<p class="footnote">3. On trouvera une excellente étude sur <em>ⲛ̀</em> et sa permutation avec <em>ϧⲉⲛ</em> dans les <i>Ausgewaehlte Bemerkungen</i> de M. Andersson, p. 12–22.</p>
+	<p class="footnote">4. Jean 4, 40.</p>
+	<p class="footnote">5. Gen. 5, 6.</p>
+	<p class="footnote">6. 1. Ps. 37, 22.</p>
+	<p class="footnote">7. Th. 164.</p>
+	<p class="footnote">8. Gen. 4, 2.</p>
+	<p><em>ϥⲛⲁⲁⲓⲧⲉⲛ ⲛ̀ⲣⲁⲙⲁⲟ</em> «il nous rendra riches»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲁϥⲟϩⲓ ϧⲉⲛ ⲫⲏ ⲉ ⲛⲁϥⲟⲓ ⲙ̀ⲙⲟϥ</em> «il est resté dans ce qu'il était»<sup class="footnote">2</sup>.</p>
+	<p>5. Elle unit le complément direct à la forme absolue des verbes (277).</p>
+	<p><em>ⲛⲉⲙ- ⲛⲉⲙ⸗</em> «avec».</p>
+	<p>Pour la suffixation, voir 61.</p>
+	<p>Cette préposition signifie:</p>
+	<p>1. «avec»: <em>ϯ ⲛⲉⲙⲱⲧⲉⲛ</em> «je suis avec vous»<sup class="footnote">3</sup>.</p>
+	<p>2. «à» après le verbe <em>ⲥⲁϫⲓ</em>: <em>ⲁϥⲥⲁϫⲓ ⲛⲉⲙⲱⲟⲩ</em> «il leur parla»<sup class="footnote">4</sup>.</p>
+	<p>3. Elle sert à unir les noms et pronoms, comme conjonction (333): <em>ⲡⲉⲕⲓⲱⲧ ⲛⲉⲙ ⲁⲛⲟⲕ</em> «ton père et moi»<sup class="footnote">5</sup>.</p>
+	<p><em>ⲟⲩⲃⲉ- ⲟⲩⲃⲏ⸗</em> «contre, vers».</p>
+	<table>
+		<tr>
+			<th>Sing.</th><th></th><th>Pl.</th><th></th>
+		</tr>
+		<tr>
+			<td>1.</td><td><em>ⲟⲩⲃⲏⲓ</em></td><td>1.</td><td><em>ⲟⲩⲃⲏⲛ</em></td>
+		</tr>
+		<tr>
+			<td>2 m.</td><td><em>ⲟⲩⲃⲏⲕ</em></td><td>2.</td><td><em>ⲟⲩⲃⲉ-ⲑⲏⲛⲟⲩ</em></td>
+		</tr>
+		<tr>
+		<td>f.</td><td><em>ⲟⲩⲃⲏ</em></td><td></td><td></td>
+		</tr>
+		<tr>
+			<td>3 m.</td><td><em>ⲟⲩⲃⲏϥ</em></td><td>3.</td><td><em>ⲟⲩⲃⲏⲟⲩ</em></td>
+		</tr>
+		<tr>
+			<td>f.</td><td><em>ⲟⲩⲃⲏⲥ</em></td><td></td><td></td>
+		</tr>
+	</table>
+	<p>Cette préposition est d'assez rare occurrence:</p>
+	<p><em>ⲛⲉⲛⲃⲁⲗ ⲟⲩⲃⲏⲕ ⲡϭⲟⲓⲥ</em> «nos yeux sont vers toi, Seigneur»<sup class="footnote">6</sup>.</p>
+	<p><em>ϯ ⲟⲩⲃⲉ-</em> «donner contre, résister à».</p>
+	<p><em>ⲟⲩⲧⲉ- ⲟⲩⲧⲱ⸗</em> «entre».</p>
+	<p><em>ⲟⲩⲧⲉ ⲧⲫⲉ ⲛⲉⲙ ⲡⲕⲁϩⲓ</em> «entre le ciel et la terre»<sup class="footnote">7</sup>.</p>
+	<p><em>ⲟⲩⲧⲱⲓ ⲛⲉⲙⲱⲧⲉⲛ</em> «entre moi et vous»<sup class="footnote">8</sup>.</p>
+	<p class="footnote">1. Th. 99, 1.</p>
+	<p class="footnote">2. Th. 94.</p>
+	<p class="footnote">3. Ps. 11, 9.</p>
+	<p class="footnote">4. Jean 8, 12.</p>
+	<p class="footnote">5. Luc 2, 48.</p>
+	<p class="footnote">6. Ps. 122, 2.</p>
+	<p class="footnote">7. Bar. 6, 54.</p>
+	<p class="footnote">8. Gen. 9, 15.</p>
+	
 	</div>
 </div>
-
 	</body>
 </html>
