--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11238,7 +11238,188 @@
 	<p class="footnote">6. Ps. 122, 2.</p>
 	<p class="footnote">7. Bar. 6, 54.</p>
 	<p class="footnote">8. Gen. 9, 15.</p>
-	
+	<p><em>ⲟⲩⲧⲱⲓ ⲛⲉⲙ ⲟⲩⲧⲉ ⲯⲩⲭⲏ ⲛⲓⲃⲉⲛ ⲉⲧⲟⲛϧ</em> «entre moi et toute âme vivante»<sup class="footnote">1</sup>.</p>
+	<p><em>ϣⲁ- ϣⲁⲣⲟ⸗</em> «jusqu'à».</p>
+	<p><em>ϣⲁ ⲁⲩⲣⲏϫⲥ ⲛ̀ϯⲟⲓⲕⲟⲩⲙⲉⲛⲏ</em> «jusqu'à l'extrémité de la terre»<sup class="footnote">2</sup>.</p>
+	<p><em>ϣⲁ ⲉⲛⲉϩ</em> «jusqu'à l'éternité».</p>
+	<p>Sur <em>ϣⲁ</em> employé comme conjonction avec le subjonctif, voir 251.</p>
+	<p><em>ϧⲁ- ϧⲁⲣⲟ⸗</em> «sous».</p>
+	<p>Signifie:</p>
+	<p>1. «sous»: <em>ϧⲁ ⲟⲩⲙⲉⲛⲧ</em> «sous le boisseau»<sup class="footnote">3</sup>.</p>
+	<p>Dans ce sens il s'emploie avec les verbes qui signifient «porter» lorsque le porteur est supposé être <i>sous</i> le fardeau:</p>
+	<p><em>ⲉⲧⲟⲡⲧ ϧⲁ ⲛⲟⲩⲉⲧⲫⲱⲟⲩⲓ</em> «chargés de leurs fardeaux»<sup class="footnote">4</sup>.</p>
+	<p>2. «au sujet de, pour <i>ou</i> contre» après le verbe «témoigner»; «contre» après «murmurer»:</p>
+	<p><em>ⲉⲣⲙⲉⲑⲣⲉ ϧⲁ</em> «témoigner pour <i>ou</i> contre»<sup class="footnote">5</sup>.</p>
+	<p>3. «pour»: <em>ⲟⲩⲃⲁⲗ ϧⲁ ⲟⲩⲃⲁⲗ</em> «œil pour œil»<sup class="footnote">6</sup>.</p>
+	<p>Dans ce sens il précède le complément de prix:</p>
+	<p><em>ⲡⲓϣⲱⲡ ϧⲁ ϩⲁⲧ</em> «celui qui est acheté à prix d'argent»<sup class="footnote">7</sup>.</p>
+	<p>4. «de, au sujet de»:</p>
+	<p><em>ϯⲗⲟⲅⲟⲥ ϧⲁ</em> «rendre compte de»<sup class="footnote">8</sup>.</p>
+	<p><em>ϥⲓ ⲫⲣⲱⲟⲩϣ ϧⲁ</em> «s'occuper de»<sup class="footnote">9</sup>.</p>
+	<p>5. «comme, en qualité de»:</p>
+	<p><em>ⲁⲩϯ ⲛ̀ⲓⲱⲥⲏⲫ ⲉⲃⲟⲗ ϧⲁ ⲃⲱⲕ</em> «ils vendirent Joseph comme esclave»<sup class="footnote">10</sup>.</p>
+	<p class="footnote">1. Gen. 9, 16.</p>
+	<p class="footnote">2. Ps. 18, 4.</p>
+	<p class="footnote">3. Mt. 5, 15.</p>
+	<p class="footnote">4. Mt. 11, 28.</p>
+	<p class="footnote">5. Ord. 28.</p>
+	<p class="footnote">6. Mt. 5, 38.</p>
+	<p class="footnote">7. Gen. 17, 12.</p>
+	<p class="footnote">8. Mt. 12, 36.</p>
+	<p class="footnote">9. Mt. 6, 25.</p>
+	<p class="footnote">10. Ps. 104, 17.</p>
+	<p><em>ϧⲉⲛ- ⲛ̀ϧⲏⲧ⸗</em> «dans».</p>
+	<p>Avec les suff.:</p>
+	<table>
+	  <tr>
+		<th>Sing.</th><th></th><th>Pl.</th><th></th>
+	  </tr>
+	  <tr>
+		<td>1.</td><td><em>ⲛ̀ϧⲏⲧ</em></td><td>1.</td><td><em>ⲛ̀ϧⲏⲧⲉⲛ</em></td>
+	  </tr>
+	  <tr>
+		<td>2 m.</td><td><em>ⲛ̀ϧⲏⲧⲕ</em></td><td>2.</td><td><em>ϧⲉⲛ-ⲑⲏⲛⲟⲩ</em> ou <em>ⲛ̀ϧⲏⲧⲉⲛ-ⲑⲏⲛⲟⲩ</em></td>
+	  </tr>
+	  <tr>
+		<td>f.</td><td><em>ⲛ̀ϧⲏϯ</em></td><td></td><td></td>
+	  </tr>
+	  <tr>
+		<td>3 m.</td><td><em>ⲛ̀ϧⲏⲧϥ</em></td><td>3.</td><td><em>ⲛ̀ϧⲏⲧⲟⲩ</em></td>
+	  </tr>
+	  <tr>
+		<td>f.</td><td><em>ⲛ̀ϧⲏⲧⲥ</em></td><td></td><td></td>
+	  </tr>
+	</table>
+	<p>Signifie:</p>
+	<p>1. «dans»<sup class="footnote">1</sup>, pour le temps et le lieu:</p>
+	<p><em>ϧⲉⲛ ⲡⲓⲕⲟⲥⲙⲟⲥ</em> «dans le monde».</p>
+	<p><em>ϧⲉⲛ ⲧⲁⲣⲭⲏ</em> «au commencement».</p>
+	<p>2. «à, en»:</p>
+	<p><em>ϧⲉⲛ ⲫⲣⲁⲛ ⲙ̀ⲫⲓⲱⲧ</em> «au nom du Père».</p>
+	<p><em>ⲁⲓϯⲙⲁϯ ⲛ̀ϧⲏⲧϥ</em> «je me suis complu en lui»<sup class="footnote">2</sup>.</p>
+	<p>3. «au moyen de» pour l'instrument: <em>ϧⲱⲧⲉⲃ ϧⲉⲛ ⲧⲥⲏϥⲓ</em> «tuer par l'épée»<sup class="footnote">3</sup>.</p>
+	<p>4. «parmi, au lieu de»: <em>ϧⲉⲛ ⲛⲓⲣⲱⲙⲓ</em> «parmi les hommes»<sup class="footnote">4</sup>.</p>
+	<p><em>ϩⲁ- ϩⲁⲣⲟ⸗</em> «vers».</p>
+	<p>Signifie «vers, au devant de»:</p>
+	<p><em>ⲁⲩⲓ̀ ϩⲁⲣⲟϥ</em> «ils vinrent vers lui»<sup class="footnote">5</sup>.</p>
+	<p><em>ⲁⲩⲉⲛϥ ϩⲁ ⲓ︤ⲏ︦ⲥ︥</em> «ils le conduisirent à Jésus»<sup class="footnote">6</sup>.</p>
+	<p><em>ⲁϥⲕⲟⲧϥ ⲛ̀ϫⲉ ⲁⲃⲣⲁⲁⲙ ϩⲁ ⲛⲉϥⲁⲗⲱⲟⲩⲓ</em> «Abraham revint vers ses enfants»<sup class="footnote">7</sup>.</p>
+	<p>On a quelquefois employé <em>ϧⲁ</em> au lieu de <em>ϩⲁ</em> par simple confusion, semble-t-il: <em>ⲉⲓⲉ̀ⲓ̀ ϧⲁⲣⲟⲕ</em><sup class="footnote">8</sup> pour <em>ⲉⲓⲉ̀ⲓ̀ ϩⲁⲣⲟⲕ</em> «je viendrai vers toi».</p>
+	<p class="footnote">1. On voit que dans ce sens <em>ϧⲉⲛ</em> ne diffère pas de <em>ⲛ`</em>. Dans un grand nombre de cas, en effet, ces deux prépositions peuvent permuter, cf. AB, p. 12–22; <i>Sphinx</i>, IX, p. 129.</p>
+	<p class="footnote">2. Mt. 3, 17.</p>
+	<p class="footnote">3. Ex. 15, 9.</p>
+	<p class="footnote">4. Luc 14, 24.</p>
+	<p class="footnote">5. Mt. 5, 1.</p>
+	<p class="footnote">6. Jean 1, 43.</p>
+	<p class="footnote">7. Gen. 22, 19.</p>
+	<p class="footnote">8. Ex. 20, 24. Cf. AB. p. 47.</p>
+	<p><em>ϩⲓ- ϩⲓⲱⲧ⸗</em> «sur».</p>
+	<p>Avec les suffixes:</p>
+	<table>
+	  <tr>
+		<th>Sing.</th><th></th><th>Pl.</th><th></th>
+	  </tr>
+	  <tr>
+		<td>1.</td><td><em>ϩⲓⲱⲧ</em></td><td>1.</td><td><em>ϩⲓⲱⲧⲉⲛ</em></td>
+	  </tr>
+	  <tr>
+		<td>2 m.</td><td><em>ϩⲓⲱⲧⲕ</em></td><td>2.</td><td><em>ϩⲓ-ⲑⲏⲛⲟⲩ</em></td>
+	  </tr>
+	  <tr>
+		<td>f.</td><td><em>ϩⲓⲱϯ</em></td><td></td><td></td>
+	  </tr>
+	  <tr>
+		<td>3 m.</td><td><em>ϩⲓⲱⲧϥ</em></td><td>3.</td><td><em>ϩⲓⲱⲧⲟⲩ</em></td>
+	  </tr>
+	  <tr>
+		<td>f.</td><td><em>ϩⲓⲱⲧⲥ</em></td><td></td><td></td>
+	  </tr>
+	</table>
+	<p>Devant un nom: <em>ϩⲓ-</em>.</p>
+	<p>Signifie:</p>
+	<p>1. «sur, <em>على</em>»:</p>
+	<p><em>ϩⲓ ⲡⲓⲙⲱⲓⲧ</em> «sur le chemin»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲁϥϣⲱⲡⲓ ϩⲓ ⲡⲧⲱⲟⲩ</em> «il habita sur la montagne»<sup class="footnote">2</sup>.</p>
+	<p>2. «dans, <em>في</em>»: <em>ϩⲓ ⲡϣⲁϥⲉ</em> «dans le désert»<sup class="footnote">3</sup>.</p>
+	<p>3. «sous, du temps de, <em>على عهد</em>»: <em>ϩⲓ ⲕⲗⲁⲩⲇⲓⲟⲥ</em> «sous Claudius»<sup class="footnote">4</sup>.</p>
+	<p>4. «avec, <em>بِ مع</em>»: <em>ϣⲁⲩⲟⲩⲟⲙϥ ϩⲓ ⲱⲓⲕ</em> «ils le mangent avec du pain»<sup class="footnote">5</sup>.</p>
+	<p>5. «de, en»:</p>
+	<p><em>ϩⲓ ⲟⲩⲥⲟⲡ</em> «en une fois»<sup class="footnote">6</sup>.</p>
+	<p><em>ϩⲓ ⲫⲟⲩⲉⲓ</em> «de loin».</p>
+	<p>II. Prépositions composées.</p>
+	<p>Les prépositions composées sont formées d'une préposition simple et d'un substantif indiquant une partie du corps humain: <em>ϫⲱ⸗</em> «tête», <em>ϩⲣ⸗</em> (83) «face», <em>ⲧⲟⲧ⸗</em> (82) «main», <em>ⲣⲁⲧ⸗</em> (82) «pied», <em>ⲑⲟⲩⲱ⸗</em> «poitrine», ou le lieu: <em>ⲥⲁ</em>, <em>ⲥⲕⲉⲛ</em> «côté».</p>
+	<p>Prépositions composés:</p>
+	<p>1. de <em>ϫⲱ⸗</em> «tête»:</p>
+	<p><em>ⲉϫⲉⲛ- ⲉϫⲱ⸗</em> «sur, <em>على</em>»;</p>
+	<p><i>loc. prép.</i> <em>ⲉϩⲣⲏⲓ ⲉϫⲉⲛ</em> «sur <i>en montant</i>», <em>ⲉϧⲣⲏⲓ ⲉϫⲉⲛ</em> «sur <i>en descendant</i>»;</p>
+	<p><em>ⲓⲥϫⲉⲛ-</em> «depuis»;</p>
+	<p><em>ϧⲁϫⲉⲛ- ϧⲁϫⲱ⸗</em> «avant, devant»;</p>
+	<p><em>ϩⲓϫⲉⲛ- ϩⲓϫⲱ⸗</em> «sur», <i>loc. prép.</i> <em>ⲉⲃⲟⲗ ϩⲓϫⲉⲛ</em> «de sur <i>en descendant</i>, de sur <i>en montant</i>», et plus rarement «de <i>en s'éloignant</i>», <em>ⲛ̀ϩⲣⲏⲓ ϩⲓϫⲉⲛ</em> «sur <i>sans mouvement</i>».</p>
+	<p class="footnote">1. Mc. 11, 8.</p>
+	<p class="footnote">2. Gen. 21, 21.</p>
+	<p class="footnote">3. Luc 15, 4.</p>
+	<p class="footnote">4. Act. 11, 28.</p>
+	<p class="footnote">5. Is. 28, 27.</p>
+	<p class="footnote">6. Ps. 30, 12.</p>
+	<p>2. de <em>ϩⲣ⸗</em> «face»:</p>
+	<p><em>ⲉϩⲣⲉⲛ- ⲉϩⲣ⸗</em> «vers, au devant de, par, contre»;</p>
+	<p><em>ⲛⲁϩⲣⲉⲛ- ⲛⲁϩⲣ⸗</em> «devant, auprès de».</p>
+	<p>3. de <em>ⲧⲟⲧ⸗</em> «main»:</p>
+	<p><em>ⲉⲧⲉⲛ- ⲉⲧⲟⲧ⸗</em> «à, <em>لِ</em>»;</p>
+	<p><em>ⲛ̀ⲧⲉⲛ- ⲛ̀ⲧⲟⲧ⸗</em> «à, au pouvoir de, par, de, <em>من</em>»:</p>
+	<p><em>ⲛⲁⲩϭⲓⲱⲙⲥ ⲛ̀ⲧⲟⲧϥ</em> «ils étaient baptisés par lui»<sup class="footnote">1</sup>.</p>
+	<p><i>Loc. prép.</i> <em>ⲉⲃⲟⲗ ⲛ̀ⲧⲉⲛ</em> «de, <em>من</em>»;</p>
+	<p><em>ⲥⲁⲧⲟⲧ⸗</em> «tout de suite, sur-le-champ»;</p>
+	<p><em>ϣⲁⲧⲉⲛ-</em> «jusqu'à»;</p>
+	<p><em>ϧⲁⲧⲉⲛ- ϧⲁⲧⲟⲧ⸗</em> «près de, auprès de, au pied de, à»;</p>
+	<p><em>ϩⲓⲧⲉⲛ- ϩⲓⲧⲟⲧ⸗</em> «par, par le moyen de», <i>loc. prép.</i> <em>ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ</em> «de <i>en venant</i>, par le moyen de» (276, 1).</p>
+	<p>4. de <em>ⲣⲁⲧ⸗</em> «pied»:</p>
+	<p><em>ⲉⲣⲁⲧ⸗</em> «au pied de, sur pied»;</p>
+	<p><em>ⲛ̀ⲣⲁⲧ⸗</em> «à pied»;</p>
+	<p><em>ϧⲁⲣⲁⲧ⸗</em> «au pied de, sous»:</p>
+	<p><em>ⲁⲥⲃⲟⲣⲃⲉⲣ ⲙ̀ⲡⲓⲁⲗⲟⲩ ϧⲁⲣⲁⲧⲥ ⲛ̀ⲟⲩⲃⲱ ⲛ̀ϫⲱⲓⲧ</em> «elle jeta l'enfant au pied d'un olivier»<sup class="footnote">2</sup>.</p>
+	<p>5. de <em>ⲑⲟⲩⲱ⸗</em> «poitrine»: <em>ϧⲁⲑⲟⲩⲱ⸗</em> «près de», <em>ϩⲓⲑⲟⲩⲱ⸗</em> <i>même sens</i>.</p>
+	<p>6. de <em>ⲥⲁ-</em> «côté». Ce mot est préposition par lui-même; il indique la <i>situation</i> dans un lieu:</p>
+	<p><em>ⲥⲁ ⲡⲉⲓⲉⲃⲧ</em> «dans l'orient»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲟⲩⲓⲛⲁⲙ ⲙ̀ⲙⲟⲕ</em> «à ta droite»<sup class="footnote">4</sup>.</p>
+	<p>Il peut être uni à l'article: <em>ⲉⲡⲥⲁ ⲙ̀ⲫⲓⲟⲙ</em> «du côté de la mer»<sup class="footnote">5</sup>.</p>
+	<p>Il forme:</p>
+	<p><i>a.</i> <em>ⲛ̀ⲥⲁ- ⲛ̀ⲥⲱ⸗</em> qui signifie «derrière, après»:</p>
+	<p><em>ⲙⲟϣⲓ ⲛ̀ⲥⲱⲓ</em> «suis-moi»<sup class="footnote">6</sup>, et s'emploie après quelques verbes: <em>ⲕⲱϯ ⲛ̀ⲥⲁ-</em> «chercher», <em>ⲥⲱⲧⲉⲙ ⲛ̀ⲥⲁ-</em> «exaucer».</p>
+	<p class="footnote">1. Mt. 3, 6.</p>
+	<p class="footnote">2. Gen. 21, 15.</p>
+	<p class="footnote">3. Mt. 2, 2.</p>
+	<p class="footnote">4. Ps. 44, 9.</p>
+	<p class="footnote">5. Gen. 28, 14.</p>
+	<p class="footnote">6. Jean 1, 44.</p>
+	<p><i>b.</i> <em>ⲙⲉⲛⲉⲛⲥⲁ- ⲙⲉⲛⲉⲛⲥⲱ⸗</em> «après»; <em>ⲙⲉⲛⲉⲛⲥⲁ ⲉⲧⲁ⸗</em> «après que»<sup class="footnote">1</sup>.</p>
+	<p><i>c.</i> <em>ⲥⲁⲙⲉⲛϩⲏ ⲛ̀</em>, <em>ⲥⲁⲙⲉⲛϩⲉ-</em>, <em>ⲥⲁⲙⲉⲛϩⲏ⸗</em> «derrière, après»:</p>
+	<p><em>ⲁϥϣⲉ ⲛⲁϥ ⲥⲁⲙⲉⲛϩⲏ ⲛ̀ⲛⲉϥⲥⲛⲏⲟⲩ</em> «il suivit ses frères»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲥⲱϣ ⲉⲃⲟⲗ ⲥⲁⲙⲉⲛϩⲏⲛ</em> «elle crie derrière nous»<sup class="footnote">3</sup>.</p>
+	<p>7. de <em>ⲥⲕⲉⲛ-</em> «côté»: <em>ⲉⲥⲕⲉⲛ-</em> «à côté de, le long de, sur le bord de»:</p>
+	<p><em>ⲉⲥⲕⲉⲛ ⲫⲓⲟⲙ</em> «sur le bord de la mer»<sup class="footnote">4</sup>.</p>
+	<p><em>ϩⲓⲥⲕⲉⲛ-</em> ou <em>ⲓⲥⲕⲉⲛ-</em> <i>même sens</i>:</p>
+	<p><em>ϩⲓⲥⲕⲉⲛ ⲫⲓⲟⲙ</em> «sur le bord de la mer»<sup class="footnote">5</sup>.</p>
+	<p><em>ⲓⲥⲕⲉⲛ ⲫⲓⲁⲣⲟ</em> «sur le bord du fleuve»<sup class="footnote">6</sup>.</p>
+	<p>III. Prépositions grecques.</p>
+	<p>Les principales prépositions grecques employées en copte sont:</p>
+	<p><em>ⲕⲁⲧⲁ</em> «selon»:</p>
+	<p><em>ⲕⲁⲧⲁ ⲫⲣⲏϯ</em> «comme».</p>
+	<p><em>ⲕⲁⲧⲁ ⲫⲣⲏϯ ⲉⲧⲁϥϫⲟⲥ</em> «comme il a dit».</p>
+	<p><em>ⲡⲁⲣⲁ</em> «de, <em>من</em>, au delà de, au-dessus de».</p>
+	<p>Par analogie avec <em>ⲉⲣⲟ⸗</em> on forme quelquefois en boḥairique et généralement en ṣaꜥidique <em>ⲕⲁⲧⲁⲣⲟ⸗</em>, <em>ⲡⲁⲣⲁⲣⲟ⸗</em>: <em>ⲕⲁⲧⲁⲣⲟϥ</em> «selon lui»<sup class="footnote">7</sup>.</p>
+	<p><em>ⲭⲱⲣⲓⲥ</em> «sans»; le mot suivant est généralement sans article:</p>
+	<p><em>ⲭⲱⲣⲓⲥ ⲁⲛⲁⲅⲕⲏ</em> «sans nécessité».</p>
+	<p><em>ⲓⲙⲏϯ</em> (<em>εἴ μή τι</em>) «si ce n'est, excepté».</p>
+	<p><em>ϩⲱⲥ</em> (<em>ὡς</em>) «en tant que, comme»; le mot suivant ne prend pas d'article:</p>
+	<p><em>ϩⲱⲥ ⲁⲅⲁⲑⲟⲥ</em> «en tant que bon», <em>ϩⲱⲥ ⲣⲱⲙⲓ</em> «comme homme».</p>
+	<p class="footnote">1. Ex. 34, 33.</p>
+	<p class="footnote">2. Gen. 37, 17.</p>
+	<p class="footnote">3. Mt. 15, 23.</p>
+	<p class="footnote">4. Gen. 49, 13.</p>
+	<p class="footnote">5. Mt. 4, 13.</p>
+	<p class="footnote">6. Gen. 36, 37.</p>
+	<p class="footnote">7. Gen. 2, 18.</p>
 	</div>
 </div>
 	</body>
