--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11420,6 +11420,68 @@
 	<p class="footnote">5. Mt. 4, 13.</p>
 	<p class="footnote">6. Gen. 36, 37.</p>
 	<p class="footnote">7. Gen. 2, 18.</p>
+	<p>Chapitre XIV.</p>
+	<p>Adverbes.</p>
+	<p>Il y a en copte un certain nombre d'adverbes simples tels que: <em>ⲁϩⲁ</em> «oui», <em>ⲑⲱⲛ</em> «où?», <em>ⲣⲁⲥϯ</em> «demain». On les apprendra par l'usage. Nous ne donnons ici que les règles générales.</p>
+	<p><i>1. Adverbes de temps et de lieu.</i></p>
+	<p>Ces adverbes se forment au moyen de la particule <em>ⲛ̀</em> (<em>ⲙ̀</em>) placée devant le nom de temps et de lieu:</p>
+	<p><em>ⲙ̀-ⲡⲁⲓⲙⲁ</em> «en ce lieu, ici»;</p>
+	<p><em>ⲛ̀-ⲑⲙⲏϯ</em> «au milieu»;</p>
+	<p><em>ⲙ̀-ⲙⲁⲩ</em> «là»;</p>
+	<p><em>ⲙ̀-ⲫⲟⲟⲩ</em> «aujourd'hui»;</p>
+	<p><em>ⲙ̀-ⲙⲏⲛⲓ</em> «chaque jour»;</p>
+	<p><em>ⲛ̀-ⲣⲁⲥϯ</em> «demain».</p>
+	<p><i>2. Adverbes de manière.</i></p>
+	<p>Les adverbes de manière se forment:</p>
+	<p>1. Au moyen de <em>ⲛ̀</em> (<em>ⲙ̀</em>) et d'un substantif ou d'un infinitif sans article:</p>
+	<p><em>ⲙ̀-ⲙⲉⲧⲣⲉⲙⲛ̀ⲭⲏⲙⲓ</em> «en égyptien»;</p>
+	<p><em>ⲛ̀-ⲭⲱⲗⲉⲙ</em> «rapidement»;</p>
+	<p><em>ⲛ̀-ⲭⲱⲡ</em> «en secret».</p>
+	<p>2. Au moyen de <em>ϧⲉⲛ</em> et d'un substantif ou d'un infinitif avec l'article <em>ⲟⲩ</em>:</p>
+	<p><em>ϧⲉⲛ ⲟⲩⲙⲉⲧⲉⲫⲗⲏⲟⲩ</em> «vainement»;</p>
+	<p><em>ϧⲉⲛ ⲟⲩⲟⲩⲱⲛϩ ⲉⲃⲟⲗ</em> «manifestement».</p>
+	<p>3. Au moyen de <em>ⲛ̀</em> et d'un adjectif: <em>ⲛ̀-ϣⲟⲣⲡ</em> «d'abord».</p>
+	<p>Avec les adjectifs composés de <em>ⲁⲧ</em> privatif et d'un verbe, <em>ⲛ̀</em> forme des expressions adverbiales qui se traduisent par l'infinitif précédé de <i>sans</i>: <em>ⲛ̀ⲁⲑⲟⲩⲱⲙ</em> «sans manger»<sup class="footnote">1</sup>, <em>ⲛ̀ⲁⲧⲥⲱ</em> «sans boire», <em>ⲛ̀ⲁⲧϣⲗⲏⲗ</em> «sans prier»<sup class="footnote">2</sup>.</p>
+	<p><i>3. Adverbes de situation.</i></p>
+	<p>Le copte possède plusieurs adverbes très employés qui sont formes d'une préposition simple et d'un des mots suivants indiquant la situation dans le lieu:</p>
+	<table>
+		<tr>
+			<td><em>ⲃⲟⲗ</em></td><td>«dehors»,</td><td><em>ϧⲟⲩⲛ</em></td><td>«dedans»;</td>
+			<td><em>ⲡ-ϣⲱⲓ</em></td><td>«le haut»,</td><td><em>ⲡ-ⲉⲥⲏⲧ</em></td><td>«le bas»;</td>
+			<td><em>ϩⲣⲏⲓ</em></td><td>«dessus»,</td><td><em>ϧⲣⲏⲓ</em></td><td>«dessous»;</td>
+			<td><em>ϩⲏ</em></td><td>«devant»,</td><td><em>ⲫ-ⲁϩⲟⲩ</em></td><td>«derrière».</td>
+		</tr>
+	</table>
+	<p><em>ⲃⲟⲗ</em> forme <em>ⲉⲃⲟⲗ</em> «dehors <i>en sortant</i>». Cet adverbe accompagne un certain nombre de verbes, et, quoiqu'il ajoute au sens la nuance de sortie (angl. <i>out</i>, all. <i>aus</i>), de manifestation, d'achèvement, il ne se traduit généralement pas: <em>ⲟⲩⲱⲛϩ ⲉⲃⲟⲗ</em> «paraître, manifester». Les autres adverbes formés de <em>ⲉⲃⲟⲗ</em> sont: <em>ⲙ̀ⲃⲟⲗ</em> «hors», <em>ⲥⲁⲃⲟⲗ</em> «dehors».</p>
+	<p><em>ϧⲟⲩⲛ</em>: <em>ⲉϧⲟⲩⲛ</em> «dedans <i>en entrant</i>», <em>ⲛ̀ϧⲟⲩⲛ</em>, <em>ⲥⲁϧⲟⲩⲛ</em> «dedans» sans mouvement.</p>
+	<p><em>ⲡϣⲱⲓ</em>: <em>ⲉⲡϣⲱⲓ</em> «en haut» avec mouvement, <em>ⲙ̀ⲡϣⲱⲓ</em>, <em>ⲥⲁⲡϣⲱⲓ</em> «en haut» sans mouvement.</p>
+	<p><em>ⲡⲉⲥⲏⲧ</em>: <em>ⲉⲡⲉⲥⲏⲧ</em> «en bas» avec mouvement, <em>ⲙ̀ⲡⲉⲥⲏⲧ</em>, <em>ⲥⲁⲡⲉⲥⲏⲧ</em> «en bas» sans mouvement.</p>
+	<p><em>ϩⲣⲏⲓ</em>: <em>ⲉϩⲣⲏⲓ</em> «en haut, dessus, ici <i>en montant</i>», <em>ⲛ̀ϩⲣⲏⲓ</em> «dessus» sans mouvement.</p>
+	<p class="footnote">1. C. 94, 36.</p>
+	<p class="footnote">2. MS. 423.</p>
+	<p><em>ϧⲣⲏⲓ</em>: <em>ⲉϧⲣⲏⲓ</em> «en bas, dessous, ici <i>en descendant</i>», <em>ⲛ̀ϧⲣⲏⲓ</em> «dessous» sans mouvement.</p>
+	<p><em>ϩⲏ</em>: <em>ⲉⲧϩⲏ</em>, <em>ⲉⲑⲏ</em> «devant, en avant, au delà», <em>ⲛ̀ϩⲏ</em> «récemment», <em>ⲥⲁⲧϩⲏ</em> «avant, auparavant», <em>ϧⲁⲧϩⲏ</em> «devant», <em>ϩⲓⲧϩⲏ</em>, <em>ϩⲓⲑⲏ</em> «devant».</p>
+	<p><em>ⲫⲁϩⲟⲩ</em>: <em>ⲉⲫⲁϩⲟⲩ</em> «en arrière», <em>ⲥⲁⲫⲁϩⲟⲩ</em>, <em>ϩⲓⲫⲁϩⲟⲩ</em> «derrière».</p>
+	<p><i>Remarques.</i></p>
+	<p>1. Les adverbes composés de <em>ⲉ</em> forment des locutions prépositives, quand ils sont suivis de <em>ⲉ</em> ou de <em>ϩⲁ</em>:</p>
+	<p><em>ⲉⲃⲟⲗ ϩⲁ</em> «de <i>en sortant</i>, <i>en s'éloignant</i>»;</p>
+	<p><em>ⲉϧⲟⲩⲛ ⲉ</em>, <em>ⲉϧⲟⲩⲛ ϩⲁ</em> «vers <i>en entrant</i>»;</p>
+	<p><em>ⲉⲡϣⲱⲓ ⲉ</em>, <em>ⲉⲡϣⲱⲓ ϩⲁ</em> «vers <i>en montant</i>»;</p>
+	<p><em>ⲉϩⲣⲏⲓ ⲉϫⲉⲛ</em> «sur», etc.</p>
+	<p>Très fréquent est l'emploi de <em>ⲉⲃⲟⲗ ϧⲉⲛ</em> «de, de parmi».</p>
+	<p>2. Après les composés de <em>ⲥⲁ</em> on emploie <em>ⲙ̀</em>, <em>ⲙ̀ⲙⲟ⸗</em>: <em>ⲥⲁⲃⲟⲗ ⲙ̀</em> «en dehors de», <em>ⲥⲁϧⲟⲩⲛ ⲙ̀</em> «au dedans de», <em>ⲥⲁⲡϣⲱⲓ ⲙ̀</em> «au-dessus de», <em>ⲥⲁⲡⲉⲥⲏⲧ ⲙ̀</em> «au-dessous de», etc.</p>
+	<p>3. Après les composés de <em>ⲛ̀</em> on emploie <em>ϧⲉⲛ</em>, <em>ⲛ̀ϧⲏⲧ⸗</em>: <em>ⲛ̀ϧⲣⲏⲓ ϧⲉⲛ</em>, <em>ⲛ̀ϩⲣⲏⲓ ϧⲉⲛ</em> «dans, parmi»:</p>
+	<p><em>ⲁϥϣⲱⲡⲓ ⲛ̀ϧⲣⲏⲓ ⲛ̀ϧⲏⲧⲉⲛ</em> «il habita parmi nous»<sup class="footnote">1</sup>;</p>
+	<p><em>ⲛ̀ϩⲣⲏⲓ ⲛ̀ϧⲏⲧⲟⲩ</em> «parmi eux»<sup class="footnote">2</sup>.</p>
+	<p>4. Après les composés de <em>ⲉ</em>, <em>ⲛ</em>, on peut répéter <em>ϩⲓ</em>:</p>
+	<p><em>ⲉϩⲣⲏⲓ ϩⲓ ⲡϣⲁϥⲉ</em> «vers le désert»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲛ̀ϩⲣⲏⲓ ϩⲓ ⲡϣⲁϥⲉ</em> «dans le désert»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲛ̀ϧⲣⲏⲓ ϩⲓ ⲡϣⲁϥⲉ</em> <i>même sens</i><sup class="footnote">5</sup>.</p>
+	<p class="footnote">1. Jean 1, 14.</p>
+	<p class="footnote">2. Ex. 29, 29. Pour l'emploi et la permutation de ces deux expressions, cf. AB. p. 78, 79.</p>
+	<p class="footnote">3. Gen. 13, 1.</p>
+	<p class="footnote">4. Ex. 8, 16.</p>
+	<p class="footnote">5. Gen. 21, 14.</p>
 	</div>
 </div>
 	</body>
